@@ -3,15 +3,16 @@
 <%@ include file="validValueEditorCommon.jsp"%>
 
 <% 
-if (editable) {  
-
+if (editable) {
+%>
+<div class="<%=style.getRadioButtons()%>">
+<% 
 java.util.Iterator it = p.validValuesLabels(request); 
 for (int i = baseIndex; it.hasNext(); i++) { 
 String selected = value == i ?"checked":""; 
- 
 %> 
  
-<input type="radio" name="<%=propertyKey%>" tabindex="1" value="<%=i%>" <%=script%> <%=selected%>> <%=it.next()%>
+<input type="radio" name="<%=propertyKey%>" tabindex="1" value="<%=i%>" <%=script%> <%=selected%>> <%=it.next()%> &nbsp;&nbsp;
 
 <%
 String horizontal = request.getParameter("horizontal");
@@ -23,7 +24,7 @@ Boolean isHorizontal = Boolean.valueOf(horizontal);
 <% 
 } // while 
 %> 
- 
+ </div> 
 <%  
 } else {  
 description = p.getValidValueLabel(request, value);  
